# my_cpp_template

./: .travis.yml  CMakeLists.txt
include/foo/: foo.h
src/: CMakeLists.txt  foo.cpp  foo_internal.h  utils.hpp
tests/: CMakeLists.txt  test_foo.cpp  test_utils.cpp
